[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
bytesize = "2.3.1"
itertools = "0.14.0"
libc = "0.2.182"
num_cpus = "1.17.0"
windows-sys = { version = "0.61.2", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

oxalium-infra = { path = "crates/oxalium-infra" }

[profile.release]
lto = "thin"

[profile.prod]
inherits = "release"
lto = true
codegen-units = 1

[profile.bench]
debug = true
