[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
bytesize = "2.3.1"
clap = { version = "4.5.60", features = ["derive"] }
ctrlc = "3.5.2"
hdrhistogram = "7.5.4"
humantime = "2.3.0"
io-uring = "0.7.11"
itertools = "0.14.0"
libc = "0.2.182"
mimalloc = "0.1.48"
minstant = "0.1.7"
num_cpus = "1.17.0"
rand = "0.10.0"
tokio = { version = "1.50.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-util = { version = "0.7.18", features = ["rt"] }
windows-sys = { version = "0.61.2", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

oxalium-infra = { path = "crates/oxalium-infra" }

[profile.release]
lto = "thin"

[profile.prod]
inherits = "release"
lto = true
codegen-units = 1

[profile.bench]
debug = true
