[package]
name = "oxalium"
version = "0.0.0"

edition.workspace = true

[dependencies]
anyhow.workspace = true
bytesize.workspace = true
clap.workspace = true
ctrlc.workspace = true
hdrhistogram.workspace = true
humantime.workspace = true
io-uring.workspace = true
mimalloc.workspace = true
minstant.workspace = true
num_cpus.workspace = true
rand.workspace = true
tokio.workspace = true
tokio-util.workspace = true

oxalium-infra.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true
